Added quote tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
   <div class="container">
+    <div id = "tag-legend">
+      <p>Tag Legend</p>
+      <ul>
+        <li>🤔: Wisdom</li>
+        <li>👩🏽: Black Woman</li>
+        <li>📚: Book quote</li>
+      </ul>
+    </div>
 
     <div id="quote-box">
       <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
