Automatically loop through quotes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
       <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
     </div>
-
-    <button id="loadQuote">Show another quote</button>
-
+    <div id = "buttons">
+      <button class = "button" id="loadQuote">Show another quote</button>
+      <button class = "button" id="startStopLoop">Pause</button>
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
